# hod_madrid_py

./: .gitignore  Makefile  README.md  environment.yml  produce_hod_mock.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
src/: hello.py  hod.py  hod_config.py  hod_const.py  hod_core.py  hod_corrfunc.py  hod_cosmology.py  hod_io.py  hod_model.py  hod_pdf.py  hod_plots.py  hod_r_profile.py  hod_radial_profile.py  hod_shape.py  hod_stats.py  hod_v_profile.py
tests/: test_data.py  test_hod_pdf.py
