[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hod_madrid_py"
version = "0.0.1"
description = "Code to construct mock catalogues with an Halo Occupation Distribution (HOD) model. The code is based on Avila+2020 and VosGines+24. Please cite these papers if you use the code."
authors = [
  { name = "Madrid UAM,CIEMAT,IFT" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hod_madrid_py"]
force-sort-within-sections = true

